comecei a escrever o conteudo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Bem-vindo ao meu site</h1>
+            <h1>Curso grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto artigo 001</p>
+            <h2>Curso de HTML com CSS</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel non maiores mollitia animi molestias quisquam fuga ad neque culpa assumenda, consequuntur debitis officia a minima cum maxime facere? Fugit, placeat!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime veniam perspiciatis autem ipsa, et beatae pariatur dolorem! Quia expedita ex odit ullam corrupti iure omnis quibusdam ipsa! Temporibus, quaerat ipsum?</p>
         </article>
     </main>
 </body>
