--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
     <main>
         <header>
             <h1>Curso grátis</h1>
+            <img class="curso" src="imagens/curso-em-video-cor.png" alt="Curso em video">
         </header>
         <article>
             <h2>Curso de HTML com CSS</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso de HTML ">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel non maiores mollitia animi molestias quisquam fuga ad neque culpa assumenda, consequuntur debitis officia a minima cum maxime facere? Fugit, placeat!</p>
+            <p><a href="">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JavaScript">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime veniam perspiciatis autem ipsa, et beatae pariatur dolorem! Quia expedita ex odit ullam corrupti iure omnis quibusdam ipsa! Temporibus, quaerat ipsum?</p>
+            <p><a href="">Acesse o curso de JavaScript</a></p>
         </article>
     </main>
 </body>
